add the locale picker to appbar and he and ar localization files

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -1,3 +1,4 @@
 {
-    "language": "اَلْعَرَبِيَّةُ"
+    "language": "اَلْعَرَبِيَّةُ",
+    "phoneNumberTxt": "SMS הכניסי מספר اَلْعَرَبِيَّة שיקבל"
 }
