refactoring, adding new icons, add settings_view

--- a/lib/l10n/app_he.arb
+++ b/lib/l10n/app_he.arb
@@ -4,7 +4,7 @@
         "description": "The current language"
     },
     "phoneNumberTxt": "SMS הכניסי מספר טלפון שיקבל",
-    "selectContacts": "בחירת אנשי קשר",
+    "selectContacts": "הוספת אנשי קשר",
     "@selectContacts": {
             "description": "selected contacts"
       },
